add character defs and matrix

--- a/index.html
+++ b/index.html
@@ -19,13 +19,123 @@
         </div>
     </section>
     <section class="results">
-        <div class="helperValuesContainer">
+      <div class="flexContainer">
+        <div class="date">
 
         </div>
-        <div class="matrixContainer">
-
+        <div class="destiny">
+          <span class="title">Число судьбы</span>
         </div>
+        <div class="temperament">
+          <span class="title">Темперамент</span>
+        </div>
+        <div class="character">
+          <span class="title">Характер</span>
+        </div>
+        <div class="health">
+          <span class="title">Здоровье</span>
+        </div>
+        <div class="luck">
+          <span class="title">Удача</span>
+        </div>
+        <div class="goal">
+          <span class="title">Цель</span>
+        </div>
+        <div class="energy">
+          <span class="title">Энергия</span>
+        </div>
+        <div class="logic">
+          <span class="title">Логика</span>
+        </div>
+        <div class="responsibility">
+          <span class="title">Долг</span>
+        </div>
+        <div class="family">
+          <span class="title">Семья</span>
+        </div>
+        <div class="interest">
+          <span class="title">Интерес</span>
+        </div>
+        <div class="effort">
+          <span class="title">Труд</span>
+        </div>
+        <div class="memory">
+          <span class="title">Память</span>
+        </div>
+        <div class="habits">
+          <span class="title">Привычки</span>
+        </div>
+        <div class="confidence">
+          <span class="title">Самооценка</span>
+        </div>
+        <div class="materiality">
+          <span class="title">Быт</span>
+        </div>
+        <div class="talent">
+          <span class="title">Талант</span>
+        </div>
+        <div class="spirituality">
+          <span class="title">Духовность</span>
+        </div>
+      </div>
+      <div class="explanationContainer">
+        <div class="character">
+          <span class="title">Характер: </span>
+        </div>
+        <div class="energy">
+          <span class="title">Энергия: </span>
+        </div>
+        <div class="interest">
+          <span class="title">Интерес: </span>
+        </div>
+        <div class="health">
+          <span class="title">Здоровье: </span>
+        </div>
+        <div class="logic">
+          <span class="title">Логика: </span>
+        </div>
+        <div class="effort">
+          <span class="title">Труд: </span>
+        </div>
+        <div class="luck">
+          <span class="title">Удача: </span>
+        </div>
+        <div class="responsibility">
+          <span class="title">Долг: </span>
+        </div>
+        <div class="memory">
+          <span class="title">Память: </span>
+        </div>
+        <div class="destiny">
+          <span class="title">Число судьбы: </span>
+        </div>
+        <div class="goal">
+          <span class="title">Цель: </span>
+        </div>
+        <div class="family">
+          <span class="title">Семья: </span>
+        </div>
+        <div class="habits">
+          <span class="title">Привычки: </span>
+        </div>
+        <div class="confidence">
+          <span class="title">Самооценка: </span>
+        </div>
+        <div class="materiality">
+          <span class="title">Быт: </span>
+        </div>
+        <div class="talent">
+          <span class="title">Талант: </span>
+        </div>
+        <div class="spirituality">
+          <span class="title">Духовность: </span>
+        </div>
+        <div class="temperament">
+          <span class="title">Темперамент: </span>
+        </div>
+      </div>
     </section>
-	<script src="index.js"></script>
+    <script src="data.js"></script>
+	  <script src="index.js"></script>
   </body>
 </html>
